--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "consola": "^2.15.3",
+    "element-plus": "^2.2.16",
     "vue": "^3.2.37"
   },
   "devDependencies": {
@@ -19,6 +21,7 @@
     "unplugin-vue-components": "^0.22.4",
     "unplugin-vue-macros": "^0.11.1",
     "vite": "^3.0.7",
+    "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^0.39.5"
   }
 }
