--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vitejs/plugin-vue-jsx": "^2.0.0",
     "consola": "^2.15.3",
     "element-plus": "^2.2.16",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
@@ -22,6 +23,7 @@
     "unplugin-vue-macros": "^0.11.1",
     "vite": "^3.0.7",
     "vite-plugin-md": "^0.20.4",
+    "vite-plugin-pages": "^0.26.0",
     "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^0.39.5"
   }
